# ACS_by_Claude

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
output/: mc_results.csv
src/spacecraft_acs/: __init__.py  actuators.py  cli.py  config.py  controller.py  dynamics.py  environment.py  estimator.py  guidance.py  linearize.py  momentum.py  montecarlo.py  plotting.py  profiler.py  quaternion.py  sensors.py  simulate.py  slosh.py  stationkeeping.py
tests/: test_array_rotation.py  test_config.py  test_dynamics.py  test_estimator.py  test_guidance_controller.py  test_hold.py  test_linearize.py  test_momentum.py  test_montecarlo.py  test_profiler.py  test_quaternion.py  test_simulate.py  test_slosh.py  test_stationkeeping.py
